# knowledge-graphql-microservices

./: .cookiecutterrc  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile-django  Dockerfile-django.production  Dockerfile-node  Dockerfile-node.production  Dockerfile-pipenv  Makefile  Pipfile  README.md  docker-compose.production.yml  docker-compose.services.yml  docker-compose.stack.yml  docker-compose.yml
.docker/accounts-service/: Dockerfile  Dockerfile.production
.docker/frontend-app/: Dockerfile  Dockerfile.production
.docker/graphql-proxy/: Dockerfile
.docker/helpers/: Dockerfile.black  Dockerfile.poetry  Dockerfile.prettier
.docker/lists-service/: Dockerfile  Dockerfile.production
.docker/products-service/: Dockerfile
.helpers/: Dockerfile-black
.idea_template/: modules.xml
app/: Makefile  package.json  scanner.config.js
app/src/: settings.js
deploy/: logrotate.conf
deploy/letsencrypt/: staging.conf
deploy/nginx/: app.knowledge_graphql_microservices.proxy_django.include  app.knowledge_graphql_microservices.proxy_node.include  common.include  common.knowledge_graphql_microservices.django.include  common.knowledge_graphql_microservices.node.include  production.conf  staging.conf  staging.ssl
frontend-app/: .env.development  .env.production  Makefile  apollo.config.js  i18n.json  package.json  razzle.config.js  scanner.config.js  tsconfig.json  tslint.json
frontend-app/src/: client.tsx  index.ts  server.ts  settings.ts
frontend-app/typings/: file-type.shim.d.ts  i18n-fetch-backend.d.ts  koa-proxies.d.ts
gql_accounts_service/: .coveragerc  .prospector.yaml  Makefile  pyproject.toml  setup.cfg
gql_accounts_service/accounts/: emails.py
gql_accounts_service/gql_accounts_service/: __init__.py  apps.py  jwt.py  storages.py  urls.py  views.py
gql_accounts_service/schema/: schema.py
gql_accounts_service/schema/accounts/: data_loaders.py  mutations.py  types.py
gql_accounts_service/schema/auth/: mutations.py  queries.py
gql_accounts_service/schema/tests/: test_auth_mutation.py
gql_accounts_service/settings/: base.py  production.py  staging.py
gql_accounts_service/static/: 502.html
gql_accounts_service/templates/: base.html
gql_accounts_service/templates/emails/: password_reset.html  password_reset.txt
gql_lists_service/: .env.example  Makefile  pyproject.toml  wsgi.py
gql_lists_service/lists_service/: application.py  config.py  context.py  data_loaders.py  models.py  mutations.py  schema.py  types.py
gql_products_service/: Makefile  pyproject.toml  wsgi.py
gql_products_service/products_service/: application.py  config.py  context.py  data_loaders.py  decorators.py  models.py  mutations.py  schema.py  types.py
gql_rooms_service/: Makefile  pyproject.toml  run.py  wsgi.py
gql_rooms_service/gql_rooms_service/: application.py  config.py  models.py  mutations.py  schema.py  types.py
graphql-proxy/: .dockerignore  .env.example  Makefile  index.ts  package.json  prettier.config.js  tsconfig.json
knowledge-sharing-slides/: package.json  prettier.config.js  webpack.config.js
knowledge-sharing-slides/src/: index.js
knowledge_graphql_microservices/: .coveragerc  fabfile.py  setup.cfg
knowledge_graphql_microservices/docs/: conf.py  index.rst
knowledge_graphql_microservices/knowledge_graphql_microservices/: __init__.py  apps.py  urls.py  wsgi.py
knowledge_graphql_microservices/settings/: base.py  local.py.example  local_test.py.example  (+3 more)
requirements/: README.md  accounts.txt  all.txt  lists.txt  products.txt  rooms.txt
(+96 files in other folders)
